fix topnavbar z-index

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,7 @@
 
 .top-navbar {
     margin-bottom: 80px;
+    z-index: 999999;
 }
 
 .instagram {
